--- a/styles.css
+++ b/styles.css
@@ -137,7 +137,7 @@ a:hover {
     justify-content: center;
     padding: 10px;
     width: 200px;
-    font-size: 25px;
+    font-size: clamp(20px, 1.5vw, 40px);
 }
 #socials-container {
     display: flex;
@@ -222,35 +222,35 @@ nav#links a:not(:last-child)::after { /* Learned about this from here: https://w
     color: #2f1c60;
 }
 
-    @media (max-width: 768px) {
-        nav#links { /* Learned hamburger menu from here: https://www.w3schools.com/howto/howto_js_topnav_responsive.asp*/
-            display: none;
-            position: absolute;
-            top: 6rem;
-            left: 0;
-            width: 100%;
-            background-color: #ffffff;
-            flex-direction: column;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-            z-index: 999;
-        }
-        
-        nav#links.show {
-            display: flex !important;
-        }
-        
-        nav#links a {
-            display: block;
-            padding: 15px 20px;
-            border-bottom: 1px solid #ececec;
-            text-align: left;
-        }
-        
-        #menu-icon {
-            display: block;
-        }
-
-        nav#links a:not(:last-child)::after {
-            content: '' !important;
-        }
+@media (max-width: 768px) {
+    nav#links { /* Learned hamburger menu from here: https://www.w3schools.com/howto/howto_js_topnav_responsive.asp*/
+        display: none;
+        position: absolute;
+        top: 6rem;
+        left: 0;
+        width: 100%;
+        background-color: #ffffff;
+        flex-direction: column;
+        box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+        z-index: 999;
     }
+    
+    nav#links.show {
+        display: flex !important;
+    }
+    
+    nav#links a {
+        display: block;
+        padding: 15px 20px;
+        border-bottom: 1px solid #ececec;
+        text-align: left;
+    }
+    
+    #menu-icon {
+        display: block;
+    }
+
+    nav#links a:not(:last-child)::after {
+        content: '' !important;
+    }
+}
